--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "slugify": "^1.6.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.13.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -20,13 +21,16 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "@graphql-codegen/client-preset": "1.1.0",
+    "graphql-cli": "4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "graphql-codegen --watch"
   },
   "eslintConfig": {
     "extends": [
